visibility issue fixed

--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ font-size:17px;
 border-bottom: 1px solid gray;
 }
 .elem img{
-    /* opacity: 1; */
-    display: none;
+    opacity: 0;
     width:30%;
     height:20%;
     z-index: 999;
